--- a/openssl.cnf
+++ b/openssl.cnf
@@ -176,13 +176,10 @@ authorityKeyIdentifier = keyid,issuer
 keyUsage = critical, digitalSignature
 extendedKeyUsage = critical, OCSPSigning
 
-# Engine section
 [engine_section]
 gost = gost_section
 
-# Engine gost section
 [gost_section]
 engine_id = gost
-dynamic_path = /usr/local/ssl/lib/engines-1.1/gost.so
+dynamic_path = /opt/openssl/lib64/engines-3/gost.so
 default_algorithms = ALL
-CRYPT_PARAMS = id-Gost28147-89-CryptoPro-A-ParamSet
